<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luca.banco.Home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:textAlignment="center"
            android:text="TextView"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/helloMessage" />

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:text="@string/mat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mat" />

                    <ListView
                        android:id="@+id/listaMat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:text="@string/port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/port" />

                    <ListView
                        android:id="@+id/listaPort"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:text="@string/quim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/quim" />

                    <ListView
                        android:id="@+id/listaQuim"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:text="@string/fis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fis" />

                    <ListView
                        android:id="@+id/listaFis"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:text="@string/hist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/hist" />

                    <ListView
                        android:id="@+id/listaHist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:layout_marginTop="50dp"
                        android:text="@string/logout_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/logoutButton" />

                    <Button
                        android:text="@string/inserirQuestao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/inserirQuestao" />
                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
