<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#4f8fda"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView2" />
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="#ffffff"
                    android:textColor="#bbbbb1"
                    android:paddingLeft="5dp"
                    android:text="@string/login_string"
                    android:ems="10"
                    android:id="@+id/login" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:paddingLeft="5dp"
                    android:textColor="#bbbbb1"
                    android:text="@string/password_string"
                    android:background="#ffffff"
                    android:id="@+id/password" />
            </RelativeLayout>

            <Button
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/button_string"
                android:background="#1162ff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/imageError"
                    android:layout_weight="3" />

                <TextView
                    android:visibility="invisible"
                    android:textSize="20dp"
                    android:textColor="#ffffff"
                    android:text="@string/error_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/errorMessage"
                    android:layout_weight="7" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
